// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It orders keys using a custom key order function 1`] = `
"{
  \\"description\\": \\"Description\\",
  \\"name\\": \\"Test\\",
  \\"version\\": \\"0.0.0\\"
}
"
`;

exports[`It orders keys using the default key order 1`] = `
"{
  \\"name\\": \\"Test\\",
  \\"version\\": \\"0.0.0\\",
  \\"description\\": \\"Description\\"
}
"
`;

exports[`It orders keys using the specified key order 1`] = `
"{
  \\"name\\": \\"Test\\",
  \\"version\\": \\"0.0.0\\",
  \\"description\\": \\"Description\\"
}
"
`;

exports[`It orders scripts in alphabetical order, keeping pre and post scripts beside their counterparts 1`] = `
"{
  \\"scripts\\": {
    \\"build\\": \\"build\\",
    \\"pretest\\": \\"pretest\\",
    \\"test\\": \\"test\\",
    \\"version\\": \\"version\\",
    \\"postversion\\": \\"postversion\\"
  }
}
"
`;

exports[`It orders unspecified keys alphabetically at the end 1`] = `
"{
  \\"name\\": \\"Test\\",
  \\"version\\": \\"0.0.0\\",
  \\"description\\": \\"Description\\",
  \\"unknownPropertyA\\": true,
  \\"unknownPropertyB\\": false
}
"
`;

exports[`It sorts dependencies lowercase-first (to match npm) 1`] = `
"{
  \\"dependencies\\": {
    \\"a\\": \\"*\\",
    \\"A\\": \\"*\\",
    \\"b\\": \\"*\\"
  }
}
"
`;
